--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "buzzer",
   "version": "1.0.0",
-  "main": "bot.js",
+  "main": "botHeartbeat.js",
   "scripts": {
-    "start": "node bot.js",
+    "start": "node botHeartbeat.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@slack/events-api": "^2.3.1",
-    "cron": "^1.8.1",
     "dotenv": "^8.2.0",
     "mongoose": "^5.8.10",
+    "node-schedule": "^1.3.2",
     "node-telegram-bot-api": "^0.40.0",
     "slackbots": "^1.2.0"
   },
